corrigindo endereço dos css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
-    <link rel="stylesheet" href="mq05/estilos/style.css">
-    <link rel="stylesheet" href="mq05/estilos/media-query.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/media-query.css">
     <title>Menu Hamburguer</title>
 </head>
 <body onresize="mudouTamaho()">
